fixxing the readability

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,18 @@ body{
   color: #fff;
 }
 
+h1{
+  color: #fff;
+}
+
+h2{
+  color: #fff;
+}
+
+h3{
+  color: #fff;
+}
+
 .header-inner {
   display: flex;
   align-items: center;
